--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-# baseURL: https://example.org/
+baseURL: https://davidnguyen58.github.io/An_Blog/
 languageCode: en-us
 title: An Nguyen 
 theme: ["PaperMod"]
